[project]
name = "mcp-radarr"
version = "0.1.0"
description = "MCP server for Radarr movie management integration"
authors = [
    {name = "Martin Smith", email = "msmith@bitmonster.org"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.2.1",
    "omegaconf>=2.3.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
mcp-radarr = "mcp_radarr.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_radarr = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
